# theory-of-systems-coq

./: .gitignore  ARCHITECTURE.md  Archimedean_ERR.v  CHANGELOG.md  CLAUDE.md  CoqMakefile  CoqMakefile.conf  DEMO_REPORT.md  DIAGONAL_VS_INTERVALS.md  HeineBorel_ERR.v  INSTRUCTIONS_NEW_CHAT_v9.md  LICENSE  Makefile  Nested_Rational_Intervals.md  PROJECT_STATUS_v4.md  PROJECT_STATUS_v5.md  PROJECT_STATUS_v6.md  PROJECT_STATUS_v7.md  Preprint_ERR_Addendum.md  README.md  ShrinkingIntervals_uncountable_ERR.v  TheoryOfSystems_Core_ERR.v  Theory_of_Systems_Preprint_v4.md  Theory_of_Systems_Preprint_v5.md  _CoqProject  diagonal_demo.ml  generate_docs.sh
Architecture_of_Reasoning/: AI_FallacyDetector.v  Architecture_of_Reasoning.v  Architecture_of_Reasoning_README.md  Article_7_AI_Fallacy_Detection.tex  Article_8_Fallacy_Paradox_Resolution.tex  CompleteFallacyTaxonomy.v  DomainViolations_Complete.v  ERR_Fallacies.v  LLM_EXPERIMENT_RESULTS.md  ParadoxDissolution.v  README.md  ai_fallacy_detector.ml  demo.py  demo_output.txt
docs/: Article_ERR_Addendum.md  CHANGELOG_v4.md  Coq_Formalization_Summary_ERR.md  ERR_FRAMEWORK.md  FILE_MAP.md  L5_LEFTMOST_DEDUCTION.md  README.md  THEOREM_INDEX.md  Uncountability_Without_Axiom_of_Infinity.md  (+2 more)
tos_lang/: Evaluator.ml  Evaluator.mli  Expressions.ml  Expressions.mli  List.ml  List.mli  Nat.ml  Nat.mli  PeanoNat.ml  README.md  Reduction.ml  Reduction.mli  TypeChecker.ml  TypeChecker.mli  Typing_Expr.ml  Typing_Expr.mli  UniversePolymorphism.ml  UniversePolymorphism.mli  ai_interface.py  dune  dune-project  main.ml  parser.ml  printer.ml
(+446 files in other folders)
